[package]
name = "gor22-token"
version = "1.0.0"
description = "Gorbchain Token Library"
authors = ["Gorbchain Maintainer <goranon10@gmail.com>"]
repository = "https://github.com/gorblin-gabana/Token2022"
license = "Apache-2.0"
edition = "2021"
exclude = ["js/**"]

[features]
no-entrypoint = []
test-sbf = []
serde-traits = ["dep:serde", "dep:serde_with", "dep:base64", "spl-pod/serde-traits"]
default = ["zk-ops"]
# Remove this feature once the underlying syscalls are released on all networks
zk-ops = []

[dependencies]
arrayref = "0.3.9"
bytemuck = { version = "1.20.0", features = ["derive"] }
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.3"
solana-program = "2.1.0"
solana-security-txt = "1.1.1"
solana-zk-sdk = "2.1.0"
spl-elgamal-registry = "0.1.0"
spl-memo = "6.0"
gorb-token = "1.0.0"
gorb-ct-ciphertext-arithmetic = "1.0.0"
gorb-ct-proof-extraction = "1.0.0"
spl-token-group-interface = "0.5.0"
spl-token-metadata-interface = "0.6.0"
spl-transfer-hook-interface = "0.9.0"
spl-type-length-value = "0.7.0"
spl-pod = "0.5.0"
thiserror = "2.0"
serde = { version = "1.0.216", optional = true }
serde_with = { version = "3.11.0", optional = true }
base64 = { version = "0.22.1", optional = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
gorb-ctpg = "1.0.0"

[dev-dependencies]
lazy_static = "1.5.0"
proptest = "1.6"
serial_test = "3.2.0"
solana-program-test = "2.1.0"
solana-sdk = "2.1.0"
spl-tlv-account-resolution = "0.9.0"
serde_json = "1.0.133"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]