[package]
name = "gorb-ct-ciphertext-arithmetic"
version = "1.0.0"
description = "Gorbchain Token Library Confidential Transfer Ciphertext Arithmetic"
authors = ["Gorblin <goranon10@gmail.com>"]
repository = "https://github.com/gorblin-gabana/Token2022"
license = "Apache-2.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
bytemuck = "1.20.0"
solana-curve25519 = "2.1.0"
solana-zk-sdk = "2.1.0"

[dev-dependencies]
gorb-ctpg = "1.0.0"
curve25519-dalek = "4.1.3"

[lib]
crate-type = ["cdylib", "lib"]
