[package]
name = "gorb-elgamal-registry"
version = "1.0.0"
description = "Gorbchain ElGamal Registry Program"
authors = ["Gorblin <goranon10@gmail.com>"]
repository = "https://github.com/gorblin-gabana/Token2022"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
bytemuck = { version = "1.20.0", features = ["derive"] }
solana-zk-sdk = "2.1.0"
solana-program = "2.1.0"
gorb-pod = "1.0.0"
gorb-ct-proof-extraction = "1.0.0"
solana-sdk-ids = "2.2.1"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
