[package]
name = "gorb-ct-proof-extraction"
version = "1.0.0"
description = "Gorb Token Library Confidential Transfer Proof Extraction"
authors = ["Gorblin <goranon10@gmail.com>"]
repository = "https://github.com/gorblin-gabana/Token2022"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bytemuck = "1.20.0"
solana-curve25519 = "2.1.0"
solana-program = "2.1.0"
solana-zk-sdk = "2.1.0"
gorb-pod = "1.0.0"
thiserror = "2.0.7"

[lib]
crate-type = ["cdylib", "lib"]
