[package]
name = "gorb-ctpg"
version = "1.0.0"
description = "Gorb Token Library - Confidential Transfer Proof Generation"
authors = ["Gorblin <goranon10@gmail.com>"]
repository = "https://github.com/gorblin-gabana/Token2022"
license = "Apache-2.0"
edition = "2021"

[dependencies]
curve25519-dalek = "4.1.3"
solana-zk-sdk = "2.1.0"
thiserror = "2.0.7"

[dev-dependencies]

[lib]
crate-type = ["cdylib", "lib"]