[package]
name = "gorb-token-metadata-interface"
version = "0.6.0"
description = "Gorbchain Program Library Token Metadata Interface"
authors = ["Gorblin <goranon10@gmail.com>"]
repository = "https://github.com/gorblin-gabana/Token2022"
license = "Apache-2.0"
edition = "2021"

[features]
serde-traits = ["dep:serde", "gorb-pod/serde-traits"]

[dependencies]
borsh = "1.5.3"
num-derive = "0.4"
num-traits = "0.2"
serde = { version = "1.0.216", optional = true }
solana-borsh = "2.1.0"
solana-decode-error = "2.1.0"
solana-instruction = "2.1.0"
solana-msg = "2.1.0"
solana-program-error = "2.1.0"
spl-discriminator = "0.4.0"
solana-pubkey = "2.1.0"
spl-type-length-value ="0.7.0"
gorb-pod = { version = "1.0.0", features = [
  "borsh",
] }
thiserror = "2.0"

[dev-dependencies]
serde_json = "1.0.133"
solana-sha256-hasher = "2.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
